# chess

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Evaluate.cpp  Evaluate.h  Movegen.cpp  Movegen.h  README.md  Search.cpp  Search.h  Stringer.cpp  Stringer.h  Test.cpp  Test.h  ToString.cpp  ToString.h  Uci.cpp  Uci.h  bitfunc.h  board.cpp  board.h  directions.h  evaluate.cpp  evaluate.h  game.cpp  magicmoves.h  misc.h  movegen.cpp  movegen.h  types.h
src/: Board.cpp  Board.h  CMakeLists.txt  Evaluate.h  Movegen.cpp  Movegen.h  Search.cpp  Search.h  Test.cpp  Test.h  ToString.h  bitfunc.h  game.cpp  magicmoves.h
